2001-10-14  Adrian Custer <acuster@nature.berkeley.edu>

	* latex.c : re-order the latex escape sequence, add documentation

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* Release 0.71

2001-09-25  Jon K Hellan  <hellan@acm.org>

	* Add plugin.xml

2001-08-24  Jody Goldberg <jgoldberg@home.com>

	* font.h : don't include a gui headerfile.
	* boot.h : ditto.
	* html.h : ditto.
	* latex.h : ditto.
	* roff.h : ditto.

2001-08-21  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml: Removed

	* plugin.xml.in: Copied from plugin.xml, prepared for localization.

	* Makefile.am: Use xml-i18n-tools to create plugin.xml (with
	translations merged from .po file).

2001-08-20  Jody Goldberg <jgoldberg@home.com>

	* Release 0.70

2001-08-17  Morten Welinder <terra@diku.dk>

	* html.c (html_get_string): Eliminate bogus use of strstr.

2001-08-17  Morten Welinder <terra@diku.dk>

	* html.c (html_fprintf): Use fputc.  Don't do anything special for
 	single quote.
	(html32_file_save): Add type to STYLE element.
	(html_write_cell32): Use align, not halign.

2001-08-11  Jody Goldberg <jgoldberg@home.com>

	* Release 0.69

2001-08-01  Jody Goldberg <jgoldberg@home.com>

	* html.c (html32_file_save) : more conformance problems.
	(html40_file_save) : ditto.

2001-08-01  Jody Goldberg <jgoldberg@home.com>

	* html.c (html32_file_save) : Close with </BODY> not <BODY>
	(html40_file_save) : ditto.

2001-07-18  Zbigniew Chyla  <cyba@gnome.pl>

	* plugin.xml: Removed PDF file saver.

	* roff.c (roff_pdf_file_save): Removed.

2001-07-17  Jody Goldberg <jgoldberg@home.com>

	* Release 0.68

2001-06-28  Jody Goldberg <jgoldberg@home>

	* Release 0.67

2001-06-28  Jody Goldberg <jgoldberg@home.com>

	* roff.c (write_wb_roff) : we don't handle spans or merges.
	* latex.c (latex2e_file_save) : ditto.
	(latex_file_save) : ditto.
	* html.c (html32_file_save) : ditto.
	(html40_file_save) : ditto.

2001-06-27  Jody Goldberg <jgoldberg@home.com>

	* Release 0.66
